<resources>
    <string name="app_name">QuizzApp Basic</string>

    <string name="question1">¿Cuál es el planeta más grande del sistema solar?</string>
    <string-array name="question1_options">
        <item>Marte</item>
        <item>Venus</item>
        <item>Júpiter </item>
        <item>Saturno</item>
    </string-array>

    <string name="question2">¿Cuál de estos elementos es un metal?</string>
    <string-array name="question2_options">
        <item>Helio</item>
        <item>Oxígeno</item>
        <item>Hierro</item>
        <item>Nitrógeno</item>
    </string-array>

    <string name="question3">¿Qué tipo de enlace químico se forma cuando los electrones son compartidos entre átomos?</string>
    <string-array name="question3_options">
        <item>Enlade iónico</item>
        <item>Enlace de hidrógeno</item>
        <item>Enlace metálico</item>
        <item>Enlace covalente</item>
    </string-array>

    <string name="question4">¿Qué órgano humano produce insulina?</string>
    <string-array name="question4_options">
        <item>Riñón</item>
        <item>Hígado</item>
        <item>Páncreas</item>
        <item>Corazón</item>
    </string-array>

    <string name="question5">¿Cuál es la velocidad aproximada de la luz en el vacío?</string>
    <string-array name="question5_options">
        <item>300,000 km/s</item>
        <item>150,000 km/s</item>
        <item>1,000 km/s</item>
        <item>3,000 km/s</item>
    </string-array>

    <string name="question6">¿Cuál es el país más grande del mundo en superficie?</string>
    <string-array name="question6_options">
        <item>China</item>
        <item>Estados Unidos</item>
        <item>Rusia</item>
        <item>Brasil</item>
    </string-array>

    <string name="question7">¿En qué continente se encuentra Egipto?</string>
    <string-array name="question7_options">
        <item>América</item>
        <item>África</item>
        <item>Asia</item>
        <item>Europa</item>
    </string-array>

    <string name="question8">¿Cuál es el océano más grande del mundo?</string>
    <string-array name="question8_options">
        <item>Atlántico</item>
        <item>Índico</item>
        <item>Pacífico</item>
        <item>Ártico</item>
    </string-array>

    <string name="question9">¿Cuál es la capital de Australia?</string>
    <string-array name="question9_options">
        <item>Sídney</item>
        <item>Melbourne</item>
        <item>Canberra</item>
        <item>Brisbane</item>
    </string-array>

    <string name="question10">¿Qué desierto es el más grande del mundo?</string>
    <string-array name="question10_options">
        <item>Desierto del Sahara</item>
        <item>Desierto de Atacama</item>
        <item>Desierto del Gobi</item>
        <item>Antártida</item>
    </string-array>

    <string name="question11">¿En qué año ocurrió la Revolución Francesa?</string>
    <string-array name="question11_options">
        <item>1492</item>
        <item>1776</item>
        <item>1789</item>
        <item>1810</item>
    </string-array>

    <string name="question12">¿Quién fue el primer presidente de los Estados Unidos?</string>
    <string-array name="question12_options">
        <item>Thomas Jefferson</item>
        <item>Abraham Lincoln</item>
        <item>George Washington</item>
        <item>John Adams</item>
    </string-array>

    <string name="question13">¿En qué año llegó Cristóbal Colón a América?</string>
    <string-array name="question13_options">
        <item>1492</item>
        <item>1519</item>
        <item>1607</item>
        <item>1776</item>
    </string-array>

    <string name="question14">¿Cuál fue la civilización que construyó Machu Picchu?</string>
    <string-array name="question14_options">
        <item>Aztecas</item>
        <item>Mayas</item>
        <item>Incas</item>
        <item>Toltecas</item>
    </string-array>

    <string name="question15">¿Qué muro cayó en 1989 simbolizando el fin de la Guerra Fría?</string>
    <string-array name="question15_options">
        <item>Muro de China</item>
        <item>Muro de Berlín</item>
        <item>Muro de los Lamentos</item>
        <item>Muro de Adriano</item>
    </string-array>

    <string name="question16">¿Cúal es el nombre del villano de Iron Man 1?</string>
    <string-array name="question16_options">
        <item>Whiplash</item>
        <item>El mandarín</item>
        <item>Hulk</item>
        <item>Iron Monger</item>
    </string-array>

    <string name="question17">¿Cuál es el nombre Sith del Cansiller Palpatine?</string>
    <string-array name="question17_options">
        <item>Darth Vader</item>
        <item>Naboo</item>
        <item>Dath Sidious</item>
        <item>Darth Maul</item>
    </string-array>

    <string name="question18">¿Cuál es la película animada más taquillera de la historia?</string>
    <string-array name="question18_options">
        <item>Frozen II</item>
        <item>El Rey León (2019)</item>
        <item>Los Increíbles 2</item>
        <item>Minions</item>
    </string-array>

    <string name="question19">¿Quién interpretó al Joker en *El Caballero de la Noche*?</string>
    <string-array name="question19_options">
        <item>Joaquin Phoenix</item>
        <item>Jack Nicholson</item>
        <item>Heath Ledger</item>
        <item>Jared Leto</item>
    </string-array>

    <string name="question20">¿Qué número tenía Francesco Bernouli en Cars 2e?</string>
    <string-array name="question20_options">
        <item>45</item>
        <item>1</item>
        <item>95</item>
        <item>Ninguna de las anteriores</item>
    </string-array>

    <string name="question21">¿Quién escribió "Don Quijote de la Mancha"?</string>
    <string-array name="question21_options">
        <item>Gabriel García Márquez</item>
        <item>Miguel de Cervantes</item>
        <item>William Shakespeare</item>
        <item>Julio Verne</item>
    </string-array>

    <string name="question22">¿Cuál es el animal terrestre más rápido?</string>
    <string-array name="question22_options">
        <item>León</item>
        <item>Guepardo</item>
        <item>Caballo</item>
        <item>Canguro</item>
    </string-array>

    <string name="question23">¿Qué famoso pintor cortó parte de su propia oreja?</string>
    <string-array name="question23_options">
        <item>Pablo Picasso</item>
        <item>Leonardo da Vinci</item>
        <item>Vincent van Gogh</item>
        <item>Salvador Dalí</item>
    </string-array>

    <string name="question24">¿Cuál es el metal precioso más utilizado en joyería?</string>
    <string-array name="question24_options">
        <item>Hierro</item>
        <item>Oro</item>
        <item>Bronce</item>
        <item>Platino</item>
    </string-array>

    <string name="question25">¿Cuál era el nombre del doctor de Frankenstein?</string>
    <string-array name="question25_options">
        <item>Dr. Frank</item>
        <item>Frankie</item>
        <item>Víctor</item>
        <item>Sebastián</item>
    </string-array>

    <string name="topic1">Ciencia</string>
    <string name="topic2">Geografía</string>
    <string name="topic3">Historia</string>
    <string name="topic4">Películas</string>
    <string name="topic5">Cultura General</string>

    <string name="nextButton">Siguiente</string>
    <string name="backButton">Anterior</string>

    <string name="app_logo">Logo de QuizApp</string>
    <string name="play">JUGAR</string>
    <string name="options">OPCIONES</string>
    <string name="error_message">Se produjo un error. Por favor, inténtalo de nuevo.</string>
    <string name="loading">Cargando, espera un momento...</string>
    <string name="logo_content_description">Logotipo de la aplicación QuizApp</string>
    <string name="app_subtitle">Pon a prueba tus conocimientos</string>
    <string name="decoration_description">Imagen decorativa de la interfaz</string>
    <string name="footer_text">Preguntados</string>
    <string name="user">Chan</string>
    <string name="logo_desc">SI</string>
    <string name="play_icon_desc">si</string>
    <string name="options_image_desc">SI</string>

    <string name="girar_ruleta">Girar Ruleta</string>

    <string name="difficulty">Selecciona la dificultad:</string>
    <string name="hints">Número de pistas:</string>
    <string name="back">Regresar</string>
    <string name="work_in_progress">Trabajo en progreso</string>
    <string name="hints_description">SI</string>
    <string name="hint">Hint</string>

    <string name="score_text">Tu puntuación: 0</string>"
    <string name="restart_button">Reiniciar Quiz</string>
    <string name="resultado">Resultado</string>
    <string name="save_settings">Guardar cambios</string>
    <string name="roulette_text">Eligiendo nueva pregunta...</string>


    <string name="easy_lowestResult">¡Ni una buena!</string>
    <string name="easy_result1">¡Intenta de nuevo!</string>
    <string name="easy_result2">¿Eso es todo lo que sabes?</string>
    <string name="easy_highestResult">¡Ahora intenta algo más dificil!</string>

    <string name="normal_lowestResult">¡Eres un novato!</string>
    <string name="normal_result1">¿Este es el límite de tus capacidades?</string>
    <string name="normal_result2">¡Aprende más!</string>
    <string name="normal_highestResult">¡Todavía no es suficiente! Ve por el difícil</string>

    <string name="hard_lowestResult">"¡Vuelve al modo fácil!"</string>
    <string name="hard_result1">¡Al menos intentaste!</string>
    <string name="hard_result2">¡Todavía no aprendiste nada!</string>
    <string name="hard_highestResult">¡Finalmente un resultado aceptable!</string>

    <string name="just_try_again">"¡Intenta de nuevo, puedes mejorar!"</string>
    <string name="puntuation">Tu puntuación: </string>
</resources>