<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/resultImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="Imagen de resultado"/>

    <TextView
        android:id="@+id/resultMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resultado"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_button"
        android:layout_marginTop="20dp"/>
</LinearLayout>
