<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".OptionsActivity">

    <ImageView
        android:id="@+id/ivWorkInProgress"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/work_in_progress"
        android:src="@drawable/work_in_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/difficulty"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWorkInProgress" />

    <Spinner
        android:id="@+id/spinnerDifficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvDifficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:entries="@array/difficulty_levels"/>

    <TextView
        android:id="@+id/tvHints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/hints"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerDifficulty" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderHints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="3"
        android:stepSize="1"
        android:contentDescription="@string/hints_description"
        app:layout_constraintTop_toBottomOf="@id/tvHints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/orange"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliderHints" />

</androidx.constraintlayout.widget.ConstraintLayout>
